Update to 1.18.1